--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap');
 body {
-    color: red;
+    font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
-    color: blue;
+
+/** container **/
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-h2 {
-    color: green;
+.container-center {
+    max-width: 600px;
+    margin: auto;
 }
 
-#lib-header {
-    color: gray;
+.container-center {
+    max-width: 600px;
+    margin: auto;
 }
 
-.para {
-    color: aqua;
-}
+
+/** links **/
